# prio-mage

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_calculator.py
.github/workflows/: docker-publish.yml  test.yml
prio_mage/: __init__.py  __main__.py  calculator.py  github_client.py
